--- a/css/style.css
+++ b/css/style.css
@@ -192,13 +192,13 @@ h1 {
 	background:#eee;
 }
 
-/* About */
+/* concept */
 
-#about {
-    padding-bottom: 80px;
+#concept {
+    padding-bottom: 50px;
 }
 
-#about h2 {
+#concept h2 {
     padding-top: 50px;
 }
 
@@ -212,6 +212,7 @@ h1 {
     width: 700px;
     margin-right: 50px;
     margin-left: -200px;
+    margin-top: -120px;
 }
 
 .c-text h3 {
@@ -678,7 +679,7 @@ body.appear #container {
 
     .nav-list {
         margin-right: 0;
-       margin-left: 15px;
+       margin-left: 30px;
     }
 
     h1 {
@@ -888,7 +889,7 @@ body.appear #container {
 	background:#eee;
 }
 
-/* about */
+/* concept */
 .c-list {
     display: block;
     margin-top: 80px;
